--- a/fourier-analysis/pyproject.toml
+++ b/fourier-analysis/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "scipy>=1.16.2",
     "seaborn>=0.13.2",
 ]
 
